--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
     }
 
     function acc1(s) {
-        s.nextElementSibling.getAttribute('data-h')
-        s.nextElementSibling.style.height=h + 'px'
+       let h = s.nextElementSibling.getAttribute('data-h')
+        s.nextElementSibling.style.height= h + 'px'
     }
 </script>
 
