--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 the best WordPress plugin for accordion design?</h2>
                             <p class="lg:text-xl xl:text-2xl">Ultimate Blocks is a powerful option—it’s simple,
                                 lightweight, highly customizable, and
-                                includes FAQ Schema support.</p>
+                                includes FAQ Schema support......</p>
                         </li>
                     </ul>
                 </div>
