--- a/index1.html
+++ b/index1.html
@@ -18,12 +18,14 @@
                 background-color: khaki;
                 }
                 p{
-                    
+                    height: 0;
+                    /* overflow: hidden; */
+                    transition: 1s;
                 }
             }
         }
         .toggleHeight{
-            height: 0;
+            height: auto !important;
         }
     </style>
 </head>
@@ -31,7 +33,7 @@
     <ul class="acc">
         <li>
             <h2 onclick="acc1(this)">click</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid odit dignissimos cum iure tenetur modi enim sed temporibus, officia, omnis voluptatibus reiciendis adipisci vitae quam voluptate aspernatur, voluptas qui neque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliqus voluptatibus reiciendis adipisci vitae quam voluptate aspernatur, voluptas qui neque.</p>
         </li>
         <li>
             <h2 onclick="acc1(this)">click</h2>
@@ -39,7 +41,7 @@
         </li>
         <li>
             <h2 onclick="acc1(this)">click</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid odit dignissimos cum iure tenetur modi enim sed temporibus, officia, omnis voluptatibus reiciendis adipisci vitae quam voluptate aspernatur, voluptas qui neque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe vitae a et. Magni dicta aliquam necessitatibus consectetur similique? Perspiciatis, accusamus quasi obcaecati pariatur consectetur dolores aperiam dolorem quas deserunt nostrum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid odit dignissimos cum iure tenetur modi enim sed temporibus, officia, omnis voluptatibus reiciendis adipisci vitae quam voluptate aspernatur, voluptas qui neque.</p>
         </li>
     </ul>
 </body>
