--- a/index.html
+++ b/index.html
@@ -311,28 +311,31 @@
                     <!-- //////////////////////////////accordion-menu//////////////////  -->
                     <ul class="acc">
                         <li>
-                            <h2 onclick="acc1(this,0)"class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">What is an
+                            <h2 onclick="acc1(this,0)" class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">What is
+                                an
                                 accordion in website design?</h2>
                             <p class="lg:text-xl xl:text-2xl">An accordion is a UI element that allows users to expand
                                 and collapse sections to reveal
                                 or hide content, keeping web pages organized and interactive.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,1)"class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">What are
+                            <h2 onclick="acc1(this,1)" class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">What are
                                 the benefits of using an accordion</h2>
                             <p class="lg:text-xl xl:text-2xl">Accordions simplify complex content, reduce page clutter,
                                 improve mobile usability, and
                                 enhance user engagement.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,2)"class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I add
+                            <h2 onclick="acc1(this,2)" class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I
+                                add
                                 accordions without a plugin in WordPress?</h2>
                             <p class="lg:text-xl xl:text-2xl">Yes, using the default Details block. But using a plugin
                                 like Ultimate Blocks makes it
                                 much faster and easier, especially with customizations.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,3)"class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I add
+                            <h2 onclick="acc1(this,3)" class="font-medium lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I
+                                add
                                 accordions without a plugin in WordPress?</h2>
                             <p class="lg:text-xl xl:text-2xl">Yes, using the default Details block. But using a plugin
                                 like Ultimate Blocks makes it
@@ -346,6 +349,38 @@
                                 includes FAQ Schema support......</p>
                         </li>
                     </ul>
+                    <!-- \\\\\\\\\\\\\\\\\\\\\after menu\\\\\\\\\\\\\\\\\\\\ -->
+                     <div class="mt-20 text-red-500 font-medium *:flex *:py-3">
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">Content Toggle (Accordion) Block:
+                            Streamline Your Content To Engage Your Visitors</p>
+                    </div>
+                    <!-- ///////////////////// -->
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">How to Add an Accordion in WordPress
+                            (With/out a Plugin)</p>
+                    </div>
+                    <!-- ////////////////////////// -->
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">10+ Best WordPress Accordion Plugins (Free
+                            & Pro)</p>
+                    </div>
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">How to Put Accordions into Tabs in
+                            WordPress</p>
+                    </div>
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">How to Add Accordion FAQs with Categories
+                            in WordPress</p>
+                    </div>
+                    <div><i class="icon-right-open pt-0.5"></i>
+                        <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl">How to Create a Nested Accordion in
+                            WordPress
+                            Share
+                            Tweet
+                        </p>
+                    </div>
+                    </div>
                 </div>
         </section>
         <!-- section 1 -->
@@ -406,7 +441,7 @@
             // برای اضافه کردن یک کلاس به عنصر
             let h = s.nextElementSibling.getAttribute('data-h')
             s.nextElementSibling.style.height = h + 'px'
-               s.nextElementSibling.style.padding = '2px'
+            s.nextElementSibling.style.padding = '2px'
             s.nextElementSibling.setAttribute('data-status', 'on')
 
         } else {
