--- a/index.html
+++ b/index.html
@@ -178,25 +178,25 @@
                 <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl text-gray-500">They’re perfect for FAQs, service
                     breakdowns, course content, product features, and more.
                 </p>
-                <h4 class="text-red-700 text-xl font-medium lg:text-3xl xl:text-4xl 2xl:text-5xl">1-Dropbox</h4>
+                <h4 class="text-red-700 text-xl font-medium lg:text-2xl ">1-Dropbox</h4>
                 <figure><img class="object-cover w-full" src="style/image/dropbox-img.png" alt=""></figure>
                 <p class="lg:text-xl xl:text-2xl 2xl:text-3xl">Dropbox uses a clean, minimal accordion format for their
                     Frequently Asked Questions page. Simple headings and quick access make it easy for users to find
                     exactly what they need without overwhelming them with content.
                 </p>
-                <h4 class="text-red-700 text-xl font-medium lg:text-3xl xl:text-4xl 2xl:text-5xl">1-Codecademy</h4>
+                <h4 class="text-red-700 text-xl font-medium lg:text-2xl ">1-Codecademy</h4>
                 <figure><img class="object-cover w-full" src="style/image/codecademi-img.png" alt=""></figure>
                 <p class="lg:text-xl xl:text-2xl 2xl:text-3xl">Codecademy structures its course curriculum using
                     accordion tabs. This layout offers users an overview first, then lets them dive deeper into sections
                     they’re most interested in, which enhances focus and usability.
                 </p>
-                <h4 class="text-red-700 text-xl font-medium lg:text-3xl xl:text-4xl 2xl:text-5xl">1-Designmodo</h4>
+                <h4 class="text-red-700 text-xl font-medium lg:text-2xl ">1-Designmodo</h4>
                 <figure><img class="object-cover w-full" src="style/image/design-img.png" alt=""></figure>
                 <p class="lg:text-xl xl:text-2xl 2xl:text-3xl">Designmodo cleverly turned its navigation into an
                     accordion, keeping the sidebar clean and scalable. It’s a great example of using accordions outside
                     typical FAQ or content sections.
                 </p>
-                <h4 class="text-red-700 text-xl font-medium lg:text-3xl xl:text-4xl 2xl:text-5xl">1-&Tea</h4>
+                <h4 class="text-red-700 text-xl font-medium lg:text-2xl ">1-&Tea</h4>
                 <figure><img class="object-cover w-full" src="style/image/tea-img.png" alt=""></figure>
                 <p class="lg:text-xl xl:text-2xl 2xl:text-3xl">&Tea presents their menu using vibrant, image-rich
                     accordion tabs. Users can click each drink to reveal detailed descriptions and ingredients, creating
@@ -262,7 +262,7 @@
                     </p>
                     <!-- step1 -->
 
-                    <h3 class="text-xl font-medium md:text-2xl xl:text-3xl py-10!">Step 1: Install the Ultimate Blocks
+                    <h3 class="text-xl font-medium md:text-2xl  py-10!">Step 1: Install the Ultimate Blocks
                         Plugin
                     </h3>
                     <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl py-10!">Head over to your WordPress dashboard
@@ -271,7 +271,7 @@
                     </p>
                     <figure><img class="object-cover w-full" src="style/image/step1-img.png" alt=""></figure>
                     <!-- step2 -->
-                    <h3 class="text-xl font-medium md:text-2xl xl:text-3xl py-10!">Step 2: Integrate the ‘Content
+                    <h3 class="text-xl font-medium md:text-2xl  py-10!">Step 2: Integrate the ‘Content
                         Toggle’ Block
                     </h3>
                     <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl py-10!">Head to the desired post or page where
@@ -282,7 +282,7 @@
                     <!-- step2 -->
                     <!-- step3 -->
 
-                    <h3 class="text-xl font-medium md:text-2xl xl:text-3xl py-10!">Step 3: Populate Content & Customize
+                    <h3 class="text-xl font-medium md:text-2xl  py-10!">Step 3: Populate Content & Customize
                         the Block
                     </h3>
                     <p class="lg:text-xl px-1.5 xl:text-2xl 2xl:text-3xl py-10!">Now you’re ready to start adding in
@@ -311,7 +311,7 @@
                     <!-- //////////////////////////////accordion-menu//////////////////  -->
                     <ul class="acc">
                         <li>
-                            <h2 onclick="acc1(this,0)" class="relative font-medium text-sm md:text-lg lg:text-2xl xl:text-3xl 2xl:text-4xl ">What is
+                            <h2 onclick="acc1(this,0)" class="relative font-medium text-sm md:text-lg lg:text-2xl ">What is
                                 an
                                 accordion in website design? <div class="icon-toggle absolute w-15 h-full right-0 text-center">
                                     <i class="icon-plus block"></i>
@@ -321,7 +321,7 @@
                                 or hide content, keeping web pages organized and interactive.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,1)" class="relative font-medium  text-sm md:text-lg lg:text-2xl xl:text-3xl 2xl:text-4xl">What are
+                            <h2 onclick="acc1(this,1)" class="relative font-medium  text-sm md:text-lg lg:text-2xl ">What are
                                 the benefits of using an accordion <div class="icon-toggle absolute  w-15 h-full right-0 text-center">
                                     <i class="icon-plus block"></i>
                                     <i class="icon-minus hidden"></i></div></h2>
@@ -330,7 +330,7 @@
                                 enhance user engagement.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,2)" class="relative font-medium  text-sm md:text-lg lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I
+                            <h2 onclick="acc1(this,2)" class="relative font-medium  text-sm md:text-lg lg:text-2xl ">Can I
                                 add
                                 accordions without a plugin in WordPress? <div class="icon-toggle absolute  w-15 h-full right-0 text-center">
                                     <i class="icon-plus block"></i>
@@ -340,7 +340,7 @@
                                 much faster and easier, especially with customizations.</p>
                         </li>
                         <li> 
-                            <h2 onclick="acc1(this,3)" class="relative font-medium  text-sm md:text-lg lg:text-2xl xl:text-3xl 2xl:text-4xl">Can I
+                            <h2 onclick="acc1(this,3)" class="relative font-medium  text-sm md:text-lg lg:text-2xl ">Can I
                                 add
                                 accordions without a plugin in WordPress? <div class="icon-toggle absolute w-15 h-full right-0 text-center">
                                     <i class="icon-plus  block"></i>
@@ -350,7 +350,7 @@
                                 much faster and easier, especially with customizations.</p>
                         </li>
                         <li>
-                            <h2 onclick="acc1(this,4)" class="relative font-medium text-sm md:text-lg lg:text-2xl xl:text-3xl 2xl:text-4xl">What is
+                            <h2 onclick="acc1(this,4)" class="relative font-medium text-sm md:text-lg lg:text-2xl ">What is
                                 the best WordPress plugin for accordionmenu design? <div class="icon-toggle absolute  w-15 h-full right-0 text-center">
                                     <i class="icon-plus block"></i>
                                     <i class="icon-minus hidden"></i></div></h2>
